--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,26 @@ code {
     monospace;
 }
 
+
 img{
   width: 100%;
 }
+
+h1{
+
+  background-color: gray;
+  text-align: center;
+  color: white;
+  border-radius: 15px;
+
+}
+
+span{
+  background-color: gray;
+  color: white;
+}
+
+
+
+
+
